test/corpus/comments.txt
================================================================================
Line and nested block comments
================================================================================

// leading
rill f(x: sample) -> sample { x |> g /* c /* nested */ */ } // end

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (rill_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (type_identifier)
    (block
      (expression_statement
        (pipe_expression
          (identifier)
          (identifier)))
      (block_comment)))
  (line_comment))

================================================================================
A comment spanning lines ends a statement
================================================================================

rill main() -> sample {
  let a = 1 /* spans
  lines */ let b = 2
  let c = 3 /* same line */
  return c
}

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (let_statement
        (identifier)
        (number
          (integer)))
      (block_comment)
      (let_statement
        (identifier)
        (number
          (integer)))
      (let_statement
        (identifier)
        (number
          (integer)))
      (block_comment)
      (return_statement
        (identifier)))))
