test/corpus/definitions.txt
================================================================================
Function definition
================================================================================

fn abs(x: sample) sample {
    if x < 0 { -x } else { x }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (type_identifier)
    (block
      (expression_statement
        (if_expression
          (binary_expression
            (identifier)
            (number
              (integer)))
          (block
            (expression_statement
              (unary_expression
                (identifier))))
          (block
            (expression_statement
              (identifier))))))))

================================================================================
Rill with defaults and state
================================================================================

rill peak(x: sample, release: Time = 300ms,) sample {
    state level: sample = 0
    let a = abs(x)
    level = if a > level { a } else { level * decay(release) }
    return level
}

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier))
      (parameter
        (identifier)
        (type_identifier)
        (number
          (integer)
          (unit))))
    (type_identifier)
    (block
      (state_statement
        (identifier)
        (type_identifier)
        (number
          (integer)))
      (let_statement
        (identifier)
        (call_expression
          (identifier)
          (arguments
            (argument
              (identifier)))))
      (assignment
        (identifier)
        (if_expression
          (binary_expression
            (identifier)
            (identifier))
          (block
            (expression_statement
              (identifier)))
          (block
            (expression_statement
              (binary_expression
                (identifier)
                (call_expression
                  (identifier)
                  (arguments
                    (argument
                      (identifier)))))))))
      (return_statement
        (identifier)))))

================================================================================
Size parameters and frame types
================================================================================

rill mix_down<N, M,>(x: [sample; N], y: [[f32; 2]; M]) [sample; 1] {
    return [sum(x) / N]
}

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (size_parameters
      (identifier)
      (identifier))
    (parameters
      (parameter
        (identifier)
        (frame_type
          (type_identifier)
          (identifier)))
      (parameter
        (identifier)
        (frame_type
          (frame_type
            (type_identifier)
            (integer))
          (identifier))))
    (frame_type
      (type_identifier)
      (integer))
    (block
      (return_statement
        (frame
          (binary_expression
            (call_expression
              (identifier)
              (arguments
                (argument
                  (identifier))))
            (identifier)))))))

================================================================================
Rate specifications
================================================================================

rill decimate(x: sample) sample @ rate / 2 { return x }
rill upsample(x: sample) sample @ rate * 4 { return x }
rill same(x: sample) sample @ rate { return x }

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (type_identifier)
    (rate
      (integer))
    (block
      (return_statement
        (identifier))))
  (rill_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (type_identifier)
    (rate
      (integer))
    (block
      (return_statement
        (identifier))))
  (rill_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (type_identifier)
    (rate)
    (block
      (return_statement
        (identifier)))))

================================================================================
Rate is only a keyword after @
================================================================================

rill f(rate: f32) sample { return rate * RATE }

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (type_identifier)
    (block
      (return_statement
        (binary_expression
          (identifier)
          (identifier))))))
