test/corpus/events.txt
================================================================================
Event declarations
================================================================================

event note_on(note)
event control_change(control, cc,);
event tick
event bang()
rill main() -> sample { return 0 }

--------------------------------------------------------------------------------

(source_file
  (event_declaration
    (identifier)
    (event_parameters
      (identifier)))
  (event_declaration
    (identifier)
    (event_parameters
      (identifier)
      (identifier)))
  (event_declaration
    (identifier))
  (event_declaration
    (identifier)
    (event_parameters))
  (rill_definition
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (return_statement
        (number
          (integer))))))

================================================================================
Event handlers
================================================================================

rill main() -> sample {
  state gain = 0.0

  on note_on(note) {
    gain = note.velocity * note.velocity
  }
  on tick { gain = 0 } let x = 1
  on note_off() {}
  return gain
}

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (state_statement
        (identifier)
        (number
          (float)))
      (event_handler
        (identifier)
        (event_parameters
          (identifier))
        (block
          (assignment
            (identifier)
            (binary_expression
              (field_expression
                (identifier)
                (field_identifier))
              (field_expression
                (identifier)
                (field_identifier))))))
      (event_handler
        (identifier)
        (block
          (assignment
            (identifier)
            (number
              (integer)))))
      (let_statement
        (identifier)
        (number
          (integer)))
      (event_handler
        (identifier)
        (event_parameters)
        (block))
      (return_statement
        (identifier)))))

================================================================================
Event handlers nest in blocks
================================================================================

rill main() -> sample {
  if ready {
    on note_on(note) { pitch = note.pitch }
  }
  return 0
}

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (expression_statement
        (if_expression
          (identifier)
          (block
            (event_handler
              (identifier)
              (event_parameters
                (identifier))
              (block
                (assignment
                  (identifier)
                  (field_expression
                    (identifier)
                    (field_identifier))))))))
      (return_statement
        (number
          (integer))))))

================================================================================
Event keywords are plain names elsewhere
================================================================================

rill main(event: f32, on: f32) -> sample {
  let x = on + event
  on = 2
  on * 3
  on /* comment */ - 1
  return on
}

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier))
      (parameter
        (identifier)
        (type_identifier)))
    (type_identifier)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (identifier)
          (identifier)))
      (assignment
        (identifier)
        (number
          (integer)))
      (expression_statement
        (binary_expression
          (identifier)
          (number
            (integer))))
      (expression_statement
        (binary_expression
          (identifier)
          (block_comment)
          (number
            (integer))))
      (return_statement
        (identifier)))))

================================================================================
Field access
================================================================================

rill main() -> sample {
  let a = control.index == 74
  let b = frames[0].left.value
  let c = -note.pitch |> tuning
  f(x).y
}

--------------------------------------------------------------------------------

(source_file
  (rill_definition
    (identifier)
    (parameters)
    (type_identifier)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (field_expression
            (identifier)
            (field_identifier))
          (number
            (integer))))
      (let_statement
        (identifier)
        (field_expression
          (field_expression
            (index_expression
              (identifier)
              (number
                (integer)))
            (field_identifier))
          (field_identifier)))
      (let_statement
        (identifier)
        (pipe_expression
          (unary_expression
            (field_expression
              (identifier)
              (field_identifier)))
          (identifier)))
      (expression_statement
        (field_expression
          (call_expression
            (identifier)
            (arguments
              (argument
                (identifier))))
          (field_identifier))))))

================================================================================
Field access must start on the same line
:error
================================================================================

rill main() -> sample {
  let a = note
    .pitch
}

--------------------------------------------------------------------------------
